# SOMcupy_0.2.0

./: BTCanal.py  Binance_BTCUSDT_d.csv  README.md  bitcoin_value_prep.py  cupy_som.py  cupy_som_compact.py  pyproject.toml  requirements.txt  som_param_data.py
saved_models/: btc_som_59_BMU_dict_512_512.txt  btc_som_60_BMU_dict_512_512.txt  btc_som_61_BMU_dict_512_512.txt  btc_som_62_BMU_dict_512_512.txt  btc_som_rand_0_BMU_dict_512_512.txt  btc_som_rand_10_BMU_dict_512_512.txt  btc_som_rand_11_BMU_dict_512_512.txt  btc_som_rand_12_BMU_dict_512_512.txt  btc_som_rand_13_BMU_dict_512_512.txt  btc_som_rand_14_BMU_dict_512_512.txt  btc_som_rand_15_BMU_dict_512_512.txt  btc_som_rand_16_BMU_dict_512_512.txt  btc_som_rand_17_BMU_dict_512_512.txt  btc_som_rand_18_BMU_dict_512_512.txt  btc_som_rand_1_BMU_dict_512_512.txt  btc_som_rand_2_BMU_dict_512_512.txt  btc_som_rand_3_BMU_dict_512_512.txt  btc_som_rand_4_BMU_dict_512_512.txt  btc_som_rand_5_BMU_dict_512_512.txt  btc_som_rand_63_BMU_dict_512_512.txt  btc_som_rand_64_BMU_dict_512_512.txt  btc_som_rand_65_BMU_dict_512_512.txt  btc_som_rand_66_BMU_dict_512_512.txt  btc_som_rand_67_BMU_dict_512_512.txt  btc_som_rand_68_BMU_dict_512_512.txt  btc_som_rand_69_BMU_dict_512_512.txt  btc_som_rand_6_BMU_dict_512_512.txt  btc_som_rand_70_BMU_dict_512_512.txt  btc_som_rand_71_BMU_dict_512_512.txt  btc_som_rand_72_BMU_dict_512_512.txt  btc_som_rand_73_BMU_dict_512_512.txt  btc_som_rand_74_BMU_dict_512_512.txt  btc_som_rand_75_BMU_dict_512_512.txt  btc_som_rand_76_BMU_dict_512_512.txt  btc_som_rand_77_BMU_dict_512_512.txt  (+5 more)
