[tool.poetry]
name = "somcupy"
version = "0.1.0"
description = ""
authors = ["oaeyiaeae <85700157+oaeyiaeae@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
