[tool.poetry]
name = "somcupy"
version = "0.1.0"
description = ""
authors = ["oaeyiaeae <85700157+oaeyiaeae@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
cupy = "^11.0.0"
screeninfo = "^0.8"
Pillow = "^9.2.0"
vispy = "^0.11.0"
matplotlib = "^3.5.3"
PyQt5 = "^5.15.7"
PyQt5-Frameless-Window = "^0.1.0"
PyQtChart-Qt5 = "^5.15.2"
PyQtDataVisualization-Qt5 = "^5.15.2"
PyQtNetworkAuth-Qt5 = "^5.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
